WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186097
Take a background process assertion in WebPageProxy::callAfterNextPresentationUpdate()
https://bugs.webkit.org/show_bug.cgi?id=186097
Summary
Take a background process assertion in WebPageProxy::callAfterNextPresentatio...
Chris Dumez
Reported
2018-05-30 08:47:14 PDT
Take a background process assertion in WebPageProxy::callAfterNextPresentationUpdate() otherwise, apps may get stuck on _doAfterNextPresentationUpdate because the WebProcess got suspended.
Attachments
Patch
(1.69 KB, patch)
2018-05-30 08:48 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.78 KB, patch)
2018-05-30 12:28 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-30 08:47:42 PDT
<
rdar://problem/40651225
>
Chris Dumez
Comment 2
2018-05-30 08:48:42 PDT
Created
attachment 341575
[details]
Patch
WebKit Commit Bot
Comment 3
2018-05-30 10:42:56 PDT
Comment on
attachment 341575
[details]
Patch Clearing flags on attachment: 341575 Committed
r232298
: <
https://trac.webkit.org/changeset/232298
>
WebKit Commit Bot
Comment 4
2018-05-30 10:42:58 PDT
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 5
2018-05-30 11:15:24 PDT
Dan points out that callbackMap.put takes a BackgroundActivityToken parameter, which RemoteLayerTreeDrawingAreaProxy currently passes nullptr to: m_webPageProxy.process().send(Messages::DrawingArea::AddTransactionCallbackID(m_callbacks.put(WTFMove(callbackFunction), nullptr)), m_webPageProxy.pageID()); So this fix probably should have just made that non-null instead of capturing a BackgroundActivityToken elsewhere.
Chris Dumez
Comment 6
2018-05-30 11:53:26 PDT
Reopening to apply comments.
Chris Dumez
Comment 7
2018-05-30 12:28:45 PDT
Created
attachment 341594
[details]
Patch
mitz
Comment 8
2018-05-30 13:04:11 PDT
Comment on
attachment 341594
[details]
Patch Even better!
WebKit Commit Bot
Comment 9
2018-05-30 13:37:56 PDT
Comment on
attachment 341594
[details]
Patch Clearing flags on attachment: 341594 Committed
r232307
: <
https://trac.webkit.org/changeset/232307
>
WebKit Commit Bot
Comment 10
2018-05-30 13:37:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug