Take a background process assertion in WebPageProxy::callAfterNextPresentationUpdate() https://bugs.webkit.org/show_bug.cgi?id=186097 <rdar://problem/40651225>

Reviewed by Tim Horton.

Take a background process assertion in WebPageProxy::callAfterNextPresentationUpdate(). Otherwise,
apps may get stuck on _doAfterNextPresentationUpdate because the WebProcess got suspended.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::callAfterNextPresentationUpdate):


Canonical link: https://commits.webkit.org/201522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232298 268f45cc-cd09-0410-ab3c-d52691b4dbfc